--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 </body>
 
 <footer>
-	<p>Pre-school course 2022 </p>
+	<p>Pre-school course 2022. Anastasia Antonenkova.</p>
 	<p><a href="https://wearecommunity.io/events/js-stage0-rs-2022q4"><img src="assets/img/logo-rsschool3.png" width="50" height="50" alt="GitHub"></a></p>
 </footer>
 
