--- a/index.html
+++ b/index.html
@@ -11,13 +11,8 @@
      
 </head>
 
-
-
-<main>
 <body>
     <header>
-        <div class="header_head">
-            <div class="conteiner_head">
                 <div class="head_inner">   
                     <div class="logo">MY CV</div>
                     <nav>
@@ -28,11 +23,10 @@
                         </ul>
                     </nav>
                 </div>
-            </div>
-        </div>
     </header>
 
 
+    <main>
     <div class="container">
         <div class="leftside">
             <div class="profiletext">
@@ -70,8 +64,7 @@
             </div>
 
             <div class="contact education">
-                <p><a name="edu"></a></p>
-                <h3 class="title">Education</h3>
+                <h3 id="edu" class="title">Education</h3>
                 <ul>
                     <li>
 
@@ -93,8 +86,7 @@
             </div>
 	
 	        <div class="contact language">
-                <p><a name="lang"></a></p>
-                <h3 class="title">Languages</h3>
+                <h3 id="lang" class="title">Languages</h3>
                 <ul>
                     <li>
                         <span class="text">English</span>
@@ -142,7 +134,7 @@
             </div>
         </div>
 
-
+    
         <div class="rightside">
             <div class="about">
                 <h2 class="title2">About me</h2>
@@ -152,8 +144,7 @@
             </div>
 
             <div class="about">
-                <p><a name="exp"></a></p>
-                <h2 class="title2">Experience</h2>
+                <h2 id="exp" class="title2">Experience</h2>
                 <div class="box">
                     <div class="yearcompany">
                         <h5>2020 - 2023</h5>
@@ -231,16 +222,14 @@
                    }
                 </code></p>
             </div>
-
-
         </div>
     </div>
+    </main>>
+
+
+    <footer>
+	    <p>Pre-school course 2022. Anastasia Antonenkova.</p>
+	    <p><a href="https://wearecommunity.io/events/js-stage0-rs-2022q4"><img src="assets/img/logo-rsschool3.png" width="50" height="50" alt="GitHub"></a></p>
+    </footer>
 </body>
-
-<footer>
-	<p>Pre-school course 2022. Anastasia Antonenkova.</p>
-	<p><a href="https://wearecommunity.io/events/js-stage0-rs-2022q4"><img src="assets/img/logo-rsschool3.png" width="50" height="50" alt="GitHub"></a></p>
-</footer>
-
-</main>
 </html>
